alignment issue resolved in categories

--- a/src/Categories/AllCategories.css
+++ b/src/Categories/AllCategories.css
@@ -24,5 +24,23 @@
 }
 
 .rows {
-  margin: 2rem;
+  margin:2rem 0 2rem 0;
+  display: grid;
+  grid-template-columns:repeat(3,1fr);
+  width: 100%;
+
+
+}
+.col{
+  display: flex;
+  flex-basis: 0;
+  flex-grow: 1;
+  min-width: 0;
+  max-width: 100%;
+  justify-content: center;
+  padding: 0;
+}
+.card-body a {
+  display: flex;
+  justify-content: center;
 }
